--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "xobotyi/php-mime-type": "1.2.0",
     "ext-openssl": "*",
     "phpmailer/phpmailer": "^6.0",
-    "ext-posix": "*"
+    "ext-posix": "*",
+    "ocramius/package-versions": "1.4.0"
   },
   "autoload": {
     "psr-4": {
@@ -37,9 +38,12 @@
     }
   },
   "scripts": {
-    "pm": "./vendor/bin/phinx migrate -c config/phinx.php -e development",
-    "pr": "./vendor/bin/phinx rollback -c config/phinx.php -e development",
-    "pc": "./vendor/bin/phinx create -c config/phinx.php",
+    "pm-instance-dev": "./vendor/bin/phinx migrate -c config/phinx/instance.php -e development",
+    "pm-instance-testing": "./vendor/bin/phinx migrate -c config/phinx/instance.php -e testing",
+    "pm-instance-production": "./vendor/bin/phinx migrate -c config/phinx/instance.php -e production",
+    "pm-apps-dev": "./vendor/bin/phinx migrate -c config/phinx/apps.php -e development",
+    "pm-apps-testing": "./vendor/bin/phinx migrate -c config/phinx/apps.php -e testing",
+    "pm-apps-production": "./vendor/bin/phinx migrate -c config/phinx/apps.php -e production",
     "phpstan": "./vendor/bin/phpstan analyse lib/ test/"
   },
   "require-dev": {
