--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "ext-openssl": "*",
     "phpmailer/phpmailer": "^6.0",
     "ext-posix": "*",
-    "ocramius/package-versions": "1.4.0"
+    "ocramius/package-versions": "1.4.0",
+    "symfony/mime": "^4.3"
   },
   "autoload": {
     "psr-4": {
@@ -40,7 +41,8 @@
   "scripts": {
     "migrate-apps": "./bin/migration/migrate.php -m=app",
     "migrate-instance": "./bin/migration/migrate.php -m=instance",
-    "phpstan": "./vendor/bin/phpstan analyse lib/ test/"
+    "phpstan": "./vendor/bin/phpstan analyse lib/ test/",
+    "clear-dist": "php bin/clear_dist.php"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5",
