--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,42 @@
 {
   "name": "keestash/server",
   "type": "project",
+  "description": "Open Source Password Safe",
   "homepage": "https://keestash.com",
   "readme": "README.md",
   "license": "AGPL-3.0-or-later",
-  "description": "Open Source Password Safe",
   "authors": [
     {
       "name": "Dogan Ucar",
       "email": "dogan@dogan-ucar.de"
     }
   ],
-  "minimum-stability": "stable",
   "require": {
-    "doganoo/php-util": "0.3.12",
-    "doganoo/php-algorithms": "0.0.27",
-    "doganoo/simple-rbac": "1.5.0",
-    "symfony/routing": "4.2.5",
-    "symfony/http-foundation": "4.2.12",
-    "symfony/webpack-encore-pack": "1.0.3",
-    "php-di/php-di": "6.0.7",
-    "twig/twig": "^2.0",
-    "robmorgan/phinx": "0.11.1",
-    "filp/whoops": "2.3.1",
-    "ext-json": "*",
-    "ext-pdo": "*",
     "ext-fileinfo": "*",
-    "xobotyi/php-mime-type": "1.2.0",
+    "ext-json": "*",
     "ext-openssl": "*",
-    "phpmailer/phpmailer": "^6.0",
+    "ext-pdo": "*",
     "ext-posix": "*",
-    "symfony/mime": "^4.3",
-    "ocramius/package-versions": "1.4.0",
     "ext-sqlite3": "*",
-    "ergebnis/composer-normalize": "^2.2"
+    "doganoo/php-algorithms": "0.0.27",
+    "doganoo/php-util": "0.3.12",
+    "doganoo/simple-rbac": "1.5.0",
+    "ergebnis/composer-normalize": "^2.2",
+    "filp/whoops": "2.3.1",
+    "ocramius/package-versions": "1.4.0",
+    "php-di/php-di": "6.0.7",
+    "phpmailer/phpmailer": "^6.0",
+    "robmorgan/phinx": "0.11.1",
+    "symfony/http-foundation": "4.2.12",
+    "symfony/mime": "^4.3",
+    "symfony/routing": "4.2.5",
+    "symfony/webpack-encore-pack": "1.0.3",
+    "twig/twig": "^2.0",
+    "xobotyi/php-mime-type": "1.2.0"
+  },
+  "require-dev": {
+    "phpstan/phpstan": "^0.11.16",
+    "phpunit/phpunit": "^7.5"
   },
   "autoload": {
     "psr-4": {
@@ -43,13 +46,10 @@
       "KSA\\": "apps/"
     }
   },
+  "minimum-stability": "stable",
   "support": {
     "email": "dogan@dogan-ucar.de",
     "issues": "https://github.com/keestash/server/issues",
     "source": "https://github.com/keestash/server"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^7.5",
-    "phpstan/phpstan": "^0.11.16"
   }
 }
