--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-loader": "^8.0.0",
     "npm-watch": "^0.6.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "kind-of": ">=6.0.3",
+    "minimist": "^1.2.5"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
@@ -38,7 +40,7 @@
     "jquery": "^3.4.1",
     "jquery-ui-dist": "^1.12.1",
     "mem": "^6.0.1",
-    "npm": "^6.13.7",
+    "npm": "^6.14.4",
     "serialize-javascript": ">=2.1.1",
     "twig": "^1.14.0",
     "webpack-merge": "^4.2.2"
