--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "babel-polyfill": "^6.26.0",
     "form-data": "^2.5.1",
     "glob": "latest",
-    "idb-keyval": "^3.2.0",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "jquery-ui-dist": "^1.12.1",
+    "localforage": "^1.7.3",
     "mem": "^6.0.1",
     "npm": "^6.14.4",
     "serialize-javascript": ">=2.1.1",
