--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "doganoo/php-algorithms": "0.0.27",
     "doganoo/php-util": "0.3.12",
     "doganoo/simple-rbac": "1.5.0",
+    "doganoo/backgrounder": "^2.0.0",
     "filp/whoops": "2.3.1",
     "ocramius/package-versions": "1.4.0",
     "php-di/php-di": "6.0.7",
