--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "lib": "lib"
   },
   "scripts": {
-    "build-dev": "webpack --env dev",
-    "watch": "webpack --watch",
-    "watch-dev": "webpack --env dev --watch"
+    "build:dev": "webpack --mode development",
+    "watch:dev": "webpack --mode development --watch",
+    "build:prod": "NODE_ENV=development webpack -p",
+    "watch:prod": "webpack --mode production --watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/doganoo/todolist.git"
+    "url": "https://github.com/keestash/server.git"
   },
   "author": "Dogan Ucar",
   "license": "GPLv3",
