--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "lib": "lib"
   },
   "scripts": {
-    "build:dev": "webpack --mode development",
-    "watch:dev": "webpack --mode development --watch",
-    "build:prod": "NODE_ENV=development webpack -p",
-    "watch:prod": "webpack --mode production --watch"
+    "build-dev": "webpack --env dev",
+    "watch": "webpack --watch",
+    "watch-dev": "webpack --env dev --watch"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/keestash/server.git"
+    "url": "git+https://github.com/keestash/server.git"
   },
   "author": "Dogan Ucar",
   "license": "GPLv3",
@@ -44,6 +43,7 @@
     "npm": "^6.14.4",
     "serialize-javascript": ">=2.1.1",
     "twig": "^1.14.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "bootstrap": "^4.5"
   }
 }
