--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.5",
     "form-data": "^2.5.1",
     "glob": "latest",
     "install": "^0.13.0",
@@ -42,9 +43,9 @@
     "localforage": "^1.7.3",
     "mem": "^6.0.1",
     "npm": "^6.14.4",
+    "popper.js": "^1.16.1",
     "serialize-javascript": ">=2.1.1",
     "twig": "^1.14.0",
-    "webpack-merge": "^4.2.2",
-    "bootstrap": "^4.5"
+    "webpack-merge": "^4.2.2"
   }
 }
