--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5",
     "form-data": "^2.5.1",
+    "formvalidation": "^0.6.2-dev",
     "glob": "latest",
     "install": "^0.13.0",
     "jquery": "^3.5.0",
