forgot password view

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,6 @@ root = true
 ij_php_block_brace_style = end_of_line
 ij_php_class_brace_style = end_of_line
 ij_php_for_brace_force = always
-ij_php_if_brace_force = if_multiline
 ij_php_method_brace_style = end_of_line
 ij_php_space_after_type_cast = true
 ij_php_space_after_colon_in_return_type = true
@@ -24,4 +23,5 @@ ij_php_blank_lines_after_class_header = 1
 ij_php_blank_lines_before_class_end = 1
 ij_php_else_if_style = as_is
 ij_php_else_on_new_line = false
-ij_any_else_on_new_line = false
+ij_php_special_else_if_treatment = true
+ij_php_if_brace_force = if_multiline
