--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "npm": "^6.14.6",
     "popper.js": "^1.16.1",
     "serialize-javascript": ">=2.1.1",
+    "simple-dijs": "^2.0.2",
     "twig": "^1.14.0",
     "webpack-merge": "^4.2.2"
   }
