--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,9 @@
   },
   "require-dev": {
     "phpstan/phpstan": "^0.12",
-    "phpunit/phpunit": "^7.5"
+    "phpunit/phpunit": "^7.5",
+    "squizlabs/php_codesniffer": "^3.5",
+    "phpcompatibility/php-compatibility": "^9.3"
   },
   "autoload": {
     "psr-4": {
