--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jquery-ui-dist": "^1.12.1",
     "localforage": "^1.7.3",
     "mem": "^6.0.1",
+    "moment": "^2.27.0",
     "npm": "^6.14.6",
     "popper.js": "^1.16.1",
     "serialize-javascript": ">=2.1.1",
