--- a/composer.json
+++ b/composer.json
@@ -12,42 +12,48 @@
     }
   ],
   "require": {
+    "ext-curl": "*",
+    "ext-dom": "*",
     "ext-fileinfo": "*",
+    "ext-intl": "*",
     "ext-json": "*",
+    "ext-mbstring": "*",
+    "ext-mysql": "*",
     "ext-openssl": "*",
     "ext-pdo": "*",
     "ext-posix": "*",
     "ext-sqlite3": "*",
-    "doganoo/di-services": "^0.0.5",
-    "doganoo/php-algorithms": "^1.0",
-    "doganoo/php-util": "0.3.12",
-    "doganoo/simple-rbac": "^1.6",
+    "ext-zip": "*",
+    "doctrine/dbal": "^2.10",
     "doganoo/backgrounder": "^3.1",
-    "filp/whoops": "2.3.1",
-    "giggsey/libphonenumber-for-php": "^8.1",
-    "ocramius/package-versions": "1.4.0",
-    "php-di/php-di": "6.0.7",
-    "phpmailer/phpmailer": "^6.0",
-    "robmorgan/phinx": "0.11.1",
-    "symfony/console": "^4.4",
-    "symfony/http-foundation": "4.2.12",
-    "symfony/mime": "^4.3",
-    "symfony/routing": "4.2.5",
-    "symfony/webpack-encore-pack": "1.0.3",
-    "twig/twig": "^2.0",
-    "xobotyi/php-mime-type": "1.2.0",
-    "doctrine/dbal": "^2.9",
-    "twitter/bootstrap": "^4.1",
-    "scssphp/scssphp": "^1.1",
-    "laminas/laminas-validator": "^2.13",
+    "doganoo/di-services": "^0.0",
+    "doganoo/php-algorithms": "^1.0",
+    "doganoo/php-util": "^0.3",
+    "doganoo/simple-rbac": "^1.6",
+    "filp/whoops": "^2.7",
+    "giggsey/libphonenumber-for-php": "^8.12",
     "laminas/laminas-uri": "^2.7",
-    "ext-intl": "*"
+    "laminas/laminas-validator": "^2.13",
+    "ocramius/package-versions": "^1.4",
+    "php-di/php-di": "^6.2",
+    "phpmailer/phpmailer": "^6.1",
+    "robmorgan/phinx": "^0.11",
+    "scssphp/scssphp": "^1.2",
+    "symfony/console": "^4.4",
+    "symfony/http-foundation": "^4.2",
+    "symfony/mime": "^4.4",
+    "symfony/routing": "^4.4",
+    "symfony/webpack-encore-pack": "^1.0",
+    "twig/twig": "^2.13",
+    "twitter/bootstrap": "^4.5",
+    "xobotyi/php-mime-type": "^1.2"
   },
   "require-dev": {
+    "ergebnis/composer-normalize": "^2.8",
+    "phpcompatibility/php-compatibility": "^9.3",
     "phpstan/phpstan": "^0.12",
-    "phpunit/phpunit": "^7.5",
-    "squizlabs/php_codesniffer": "^3.5",
-    "phpcompatibility/php-compatibility": "^9.3"
+    "phpunit/phpunit": "^9.3",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
     "psr-4": {
