--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5",
+    "bootstrap-select": "^1.13.18",
     "dot-prop": ">=5.1.1",
     "elliptic": "^6.5.3",
     "form-data": "^2.5.1",
@@ -49,6 +50,7 @@
     "moment": "^2.27.0",
     "npm": "^6.14.8",
     "popper.js": "^1.16.1",
+    "semantic-ui-search": "^2.3.3",
     "serialize-javascript": ">=3.1.0",
     "simple-dijs": "^2.0.2",
     "twig": "^1.14.0",
