--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "babel-loader": "^8.0.0",
+    "@babel/core": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "kind-of": ">=6.0.3",
     "minimist": "^1.2.5",
     "npm-watch": "^0.7.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.5",
+    "bootstrap": "^4.5.2",
     "bootstrap-select": "^1.13.18",
     "dot-prop": ">=5.1.1",
     "elliptic": "^6.5.3",
@@ -42,18 +42,22 @@
     "formvalidation": "^0.6.2-dev",
     "glob": "latest",
     "install": "^0.13.0",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "jquery-ui-dist": "^1.12.1",
-    "localforage": "^1.7.3",
-    "lodash": ">=4.17.19",
-    "mem": "^6.0.1",
+    "localforage": "^1.9.0",
+    "lodash": "^4.17.20",
+    "mem": "^6.1.1",
     "moment": "^2.27.0",
     "npm": "^6.14.8",
     "popper.js": "^1.16.1",
-    "semantic-ui-search": "^2.3.3",
-    "serialize-javascript": ">=3.1.0",
+    "resolve": "^1.14.0",
+    "semantic-ui-search": "^2.3",
+    "serialize-javascript": "^4.0.0",
     "simple-dijs": "^2.0.2",
-    "twig": "^1.14.0",
+    "twig": "^1.15.2",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack-merge": "^4.2.2"
   }
 }
