--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
   "homepage": "https://keestash.com",
   "devDependencies": {
     "@babel/core": "^7.11.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^4.2.2",
+    "html-webpack-plugin": "^4.4.1",
     "kind-of": ">=6.0.3",
     "minimist": "^1.2.5",
+    "node-sass": "^4.14.1",
     "npm-watch": "^0.7.0",
+    "sass-loader": "^10.0.1",
+    "vue-loader": "^15.9.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
@@ -56,7 +63,6 @@
     "simple-dijs": "^2.0.2",
     "twig": "^1.15.2",
     "vue": "^2.6.12",
-    "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
     "webpack-merge": "^4.2.2"
   }
