introduce vue js for users app

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
       {
         "modules": false
       }
-    ]
+    ],
+    "@vue/cli-plugin-babel/preset"
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import"
