--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "corejs-typeahead": "^1.3.1"
   },
   "dependencies": {
     "axios": "^0.20.0",
