--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "bootstrap-select": "^1.13.18",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "dexie": "^3.0.2",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.3",
     "form-data": "^2.5.1",
