--- a/package.json
+++ b/package.json
@@ -23,39 +23,39 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.11.5",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@babel/preset-env": "^7.12.11",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.2",
+    "babel-loader": "^8.2.2",
+    "corejs-typeahead": "^1.3.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^4.3.0",
     "eslint": "^6.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^4.5.0",
     "kind-of": ">=6.0.3",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "npm-watch": "^0.7.0",
-    "sass-loader": "^10.0.2",
-    "vue-loader": "^15.9.3",
+    "sass-loader": "^10.1.0",
+    "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "corejs-typeahead": "^1.3.1"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
     "bootstrap-select": "^1.13.18",
-    "bootstrap-vue": "^2.16.0",
-    "core-js": "^3.6.5",
-    "dexie": "^3.0.2",
+    "bootstrap-vue": "^2.21.1",
+    "core-js": "^3.8.1",
+    "dexie": "^3.0.3",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.3",
     "form-data": "^2.5.1",
@@ -67,14 +67,14 @@
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
     "mem": "^6.1.1",
-    "moment": "^2.27.0",
-    "npm": "^6.14.8",
+    "moment": "^2.29.1",
+    "npm": "^7.3.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "resolve": "^1.14.0",
+    "resolve": "^1.19.0",
     "serialize-javascript": "^4.0.0",
     "simple-dijs": "^2.0.2",
-    "twig": "^1.15.2",
+    "twig": "^1.15.4",
     "vue": "^2.6.12",
     "vuex": "^3.5.1",
     "webpack-merge": "^4.2.2"
