--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,10 @@
     "giggsey/libphonenumber-for-php": "^8.12",
     "laminas/laminas-uri": "^2.7",
     "laminas/laminas-validator": "^2.13",
+    "monolog/monolog": "^2.2",
     "php-di/php-di": "^6.2",
     "phpmailer/phpmailer": "^6.1",
+    "psr/log": "^1.1",
     "robmorgan/phinx": "^0.11",
     "scssphp/scssphp": "^1.2",
     "symfony/console": "^4.4",
@@ -63,8 +65,8 @@
   },
   "minimum-stability": "stable",
   "scripts": {
-    "test": " cd vendor/bin && ./phpunit ../../test/",
-    "phpstan": "cd vendor/bin && ./phpstan analyse -c ../../config/phpstan/phpstan.neon ../../apps/ ../../lib --level 8 --memory-limit=2G"
+    "phpstan": "cd vendor/bin && ./phpstan analyse -c ../../config/phpstan/phpstan.neon ../../apps/ ../../lib --level 8 --memory-limit=2G",
+    "test": " cd vendor/bin && ./phpunit ../../test/"
   },
   "support": {
     "email": "dogan@dogan-ucar.de",
