--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -13,6 +13,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Build Project
+        run: |
+          - cd apps/ && git clone https://github.com/keestash/users.git
+          - cd apps/ && git clone https://github.com/keestash/password_manager.git
+          - npm install
+          - npm build:prod
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -23,3 +29,8 @@ jobs:
           release_name: Nightly ${{ github.ref }}
           draft: false
           prerelease: false
+      - name: Clean Up
+        run: |
+          - rm -rf node_modules
+          - rm -rf .github .git config/phpstan config/vagrant test/
+          - rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js
