--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -10,13 +10,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - uses: actions/checkout@master
+      - name: Keestash Users
+        uses: actions/checkout@master
         with:
-          name: keestash/users
+          repository: keestash/users
           working_directory: apps/
-      - uses: actions/checkout@master
+      - name: Keestash Password Manager
+        uses: actions/checkout@master
         with:
-          name: keestash/password_manager
+          repository: keestash/password_manager
           working_directory: apps/
       - name: Build Project
         run: |
