--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '14'
           check-latest: true
       - run: npm install
-      - run: npm build:prod
+      - run: npm run build:prod
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
