--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build Project
         uses: actions/setup-node@v2
         with:
-          node-version: '14.13.0'
-          check-latest: true
+          node-version: '12.18.2'
+      - run: npm -v  
       - run: npm install
       - run: npm run build:prod
       - name: Create Release
