--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -52,7 +52,7 @@ jobs:
           rm -rf node_modules
           rm -rf .github .git config/phpstan config/vagrant test/
           rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js
-          zip -r nightly-${GITHUB_SHA}.zip ../server
+          zip -r nightly-${{ github.sha }}.zip ../server
 
       - name: Create Release
         id: create_release
@@ -60,8 +60,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: nightly-${GITHUB_SHA}
-          release_name: nightly-${GITHUB_SHA}
+          tag_name: nightly-${{ github.sha }}
+          release_name: nightly-${{ github.sha }}
           draft: false
           prerelease: false
 
@@ -72,6 +72,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./nightly-${GITHUB_SHA}.zip
-          asset_name: nightly-${GITHUB_SHA}.zip
+          asset_path: ./nightly-${{ github.sha }}.zip
+          asset_name: nightly-${{ github.sha }}.zip
           asset_content_type: application/zip
