--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,13 +15,13 @@ jobs:
         uses: actions/checkout@master
         with:
           repository: keestash/users
-          path: apps/
+          path: apps/users
 
       - name: Keestash Password Manager
         uses: actions/checkout@master
         with:
           repository: keestash/password_manager
-          path: apps/
+          path: apps/password_manager
 
       - name: Cache Composer dependencies
         uses: actions/cache@v2
