remove logger add scss script

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Clean Up
         run: |
+          cd bin/ && php scss.php
           rm -rf node_modules
           rm -rf .github .git config/phpstan config/vagrant test/
           rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js
