--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "ext-openssl": "*",
     "ext-pdo": "*",
     "ext-posix": "*",
+    "ext-redis": "*",
     "ext-sqlite3": "*",
     "ext-zip": "*",
     "doctrine/dbal": "^2.10",
@@ -38,6 +39,7 @@
     "php-di/php-di": "^6.2",
     "phpmailer/phpmailer": "^6.1",
     "psr/log": "^1.1",
+    "ramsey/uuid": "^4.1",
     "robmorgan/phinx": "^0.11",
     "scssphp/scssphp": "^1.2",
     "symfony/console": "^4.4",
