--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,6 @@
     "doganoo/php-algorithms": "^1.0.5",
     "doganoo/php-util": "^0.3",
     "doganoo/simple-rbac": "^1.6",
-    "filp/whoops": "^2.7",
     "giggsey/libphonenumber-for-php": "^8.12",
     "laminas/laminas-uri": "^2.7",
     "laminas/laminas-validator": "^2.13",
@@ -55,7 +54,8 @@
     "phpcompatibility/php-compatibility": "^9.3",
     "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^9.3",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "filp/whoops": "^2.7"
   },
   "autoload": {
     "psr-4": {
