--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "doganoo/php-algorithms": "^1.0.5",
     "doganoo/php-util": "^0.3",
     "doganoo/simple-rbac": "^1.6",
+    "ezyang/htmlpurifier": "^4.13",
     "giggsey/libphonenumber-for-php": "^8.12",
     "laminas/laminas-uri": "^2.7",
     "laminas/laminas-validator": "^2.13",
@@ -44,6 +45,7 @@
     "symfony/console": "^4.4",
     "symfony/http-foundation": "^4.2",
     "symfony/mime": "^4.4",
+    "symfony/event-dispatcher": "^4.4",
     "symfony/routing": "^4.4",
     "twig/twig": "^2.13",
     "twitter/bootstrap": "^4.5",
@@ -51,11 +53,11 @@
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.8",
+    "filp/whoops": "^2.7",
     "phpcompatibility/php-compatibility": "^9.3",
     "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^9.3",
-    "squizlabs/php_codesniffer": "^3.5",
-    "filp/whoops": "^2.7"
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
     "psr-4": {
