--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,9 @@
     "robmorgan/phinx": "^0.11",
     "scssphp/scssphp": "^1.2",
     "symfony/console": "^4.4",
+    "symfony/event-dispatcher": "^4.4",
     "symfony/http-foundation": "^4.2",
     "symfony/mime": "^4.4",
-    "symfony/event-dispatcher": "^4.4",
     "symfony/routing": "^4.4",
     "twig/twig": "^2.13",
     "twitter/bootstrap": "^4.5",
@@ -69,6 +69,9 @@
   },
   "minimum-stability": "stable",
   "scripts": {
+    "post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
+    "post-update-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
+    "php-compatibility": "./vendor/bin/phpcs -p . --standard=PHPCompatibility --runtime-set testVersion 7.4-8.0 --extensions=php --ignore=vendor/",
     "phpstan": "cd vendor/bin && ./phpstan analyse -c ../../config/phpstan/phpstan.neon ../../apps/ ../../lib --level 8 --memory-limit=2G",
     "test": " cd vendor/bin && ./phpunit ../../test/"
   },
