--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -55,6 +55,7 @@ jobs:
           rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js
           rm -rf apps/*/js/src
           rm -rf apps/*/js/webpack.config.js
+          rm -rf apps/*/scss/*.scss
           cp config/config.sample.php config/config.php
           zip -r nightly-${{ github.sha }}.zip ../server
 
