--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "twig": "^1.15.4",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
+    "vue-loading-skeleton": "^1.1.9",
     "vuex": "^3.6.2",
     "webpack-merge": "^4.2.2"
   },
