--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.12.13",
+    "@babel/core": "^7.13.14",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.13",
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-eslint": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
+    "@babel/preset-env": "^7.13.12",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "corejs-typeahead": "^1.3.1",
@@ -37,7 +37,7 @@
     "eslint": "^6.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^4.5.2",
     "kind-of": ">=6.0.3",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
@@ -54,7 +54,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-select": "^1.13.18",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.8.3",
+    "core-js": "^3.10.0",
     "dexie": "^3.0.3",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.4",
@@ -62,18 +62,19 @@
     "formvalidation": "^0.6.2-dev",
     "glob": "latest",
     "install": "^0.13.0",
-    "jquery": "^3.5",
+    "jquery": "^3.6.0",
     "jquery-ui-dist": "^1.12.1",
     "localforage": "^1.9.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "mem": "^6.1.1",
     "moment": "^2.29.1",
-    "npm": "^7.5.3",
+    "npm": "^7.7.6",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "resolve": "^1.20.0",
     "serialize-javascript": "^4.0.0",
     "simple-dijs": "^2.0.2",
+    "ssri": ">=8.0.1",
     "twig": "^1.15.4",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
