--- a/.gitignore
+++ b/.gitignore
@@ -272,8 +272,5 @@ data/*
 data
 .instance.sqlite
 
-lib/scss/dist/*.css
-apps/*/scss/dist/*.css
-
-public/css/*
-public/js/*
+public/css/*.css
+public/js/*.js
