--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
@@ -33,7 +33,7 @@
     "babel-loader": "^8.2.2",
     "corejs-typeahead": "^1.3.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.4",
+    "css-loader": "^5.2.6",
     "eslint": "^6.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
@@ -55,7 +55,8 @@
     "bootstrap": "^4.6.0",
     "bootstrap-select": "^1.13.18",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.12.1",
+    "browserslist": ">=4.16.5",
+    "core-js": "^3.13.1",
     "dexie": "^3.0.3",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.4",
@@ -69,7 +70,7 @@
     "lodash": "^4.17.21",
     "mem": "^6.1.1",
     "moment": "^2.29.1",
-    "npm": "^7.7.6",
+    "npm": "^7.15.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "resolve": "^1.20.0",
