--- a/config/phpstan/phpstan.neon
+++ b/config/phpstan/phpstan.neon
@@ -5,3 +5,4 @@ parameters:
 	    - %rootDir%/../../../apps/*/lib/Repository/Migration/*
 	    - %rootDir%/../../../apps/*/info/*
 	checkMissingIterableValueType: false
+	treatPhpDocTypesAsCertain: false
